fix: serielization of state and params